updating for bug fixes